<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_pedidos"
        android:icon="@drawable/ic_action_pedidos"
        android:title="@string/menu_pedidos"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_pedidos_finalizados"
        android:icon="@drawable/ic_action_pedidos_finalizados"
        android:title="@string/menu_pedidos_finalizados"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_produtos"
        android:icon="@drawable/ic_action_produtos"
        android:title="@string/menu_produtos"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_clientes"
        android:icon="@drawable/ic_action_clientes"
        android:title="@string/menu_clientes"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_opcoes"
        android:icon="@drawable/ic_action_opcoes"
        android:title="@string/menu_opcoes"
        app:showAsAction="always" />

</menu>