<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/tv_cliente_novo_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:text="Cliente: "
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/spinner_usuario_novo_pedido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_usuario_novo_pedido"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/colorPrimary"
        android:hint="@string/nome_produto"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/tv_cliente_novo_pedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_cliente_novo_pedido" />

    <EditText
        android:id="@+id/et_sobrenome_cadastrar_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/sobrenome"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/spinner_usuario_novo_pedido"
        app:layout_constraintStart_toStartOf="@+id/tv_cliente_novo_pedido"
        app:layout_constraintTop_toBottomOf="@+id/spinner_usuario_novo_pedido" />

    <EditText
        android:id="@+id/et_email_cadastrar_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/et_sobrenome_cadastrar_usuario"
        app:layout_constraintStart_toStartOf="@+id/et_sobrenome_cadastrar_usuario"
        app:layout_constraintTop_toBottomOf="@+id/et_sobrenome_cadastrar_usuario" />

    <EditText
        android:id="@+id/et_senha_cadastrar_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/senha"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_email_cadastrar_usuario"
        app:layout_constraintStart_toStartOf="@+id/et_email_cadastrar_usuario"
        app:layout_constraintTop_toBottomOf="@+id/et_email_cadastrar_usuario" />

    <CheckBox
        android:id="@+id/checkBox_permitir_cadastro_cadastrar_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/permitir_cadastro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/et_senha_cadastrar_usuario"
        app:layout_constraintStart_toStartOf="@+id/et_senha_cadastrar_usuario"
        app:layout_constraintTop_toBottomOf="@+id/et_senha_cadastrar_usuario" />

    <Button
        android:id="@+id/bt_cadastrar_cadastrar_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/botao_redondo_gradiente_roxo"
        android:text="@string/cadastrar"
        android:textColor="@color/corBranca"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/checkBox_permitir_cadastro_cadastrar_usuario"
        app:layout_constraintStart_toStartOf="@+id/checkBox_permitir_cadastro_cadastrar_usuario"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_permitir_cadastro_cadastrar_usuario" />


</androidx.constraintlayout.widget.ConstraintLayout>