<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_cor_gradiente"
    android:id="@+id/constraint_layout_login">

    <TextView
        android:id="@+id/titulo_principal_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/glacial_indifference"
        android:text="@string/titulo_principal_splash_screen"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="108sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/titulo_secundario_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/glacial_indifference"
        android:text="@string/titulo_secundario_splash_screen"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="@+id/titulo_principal_login"
        app:layout_constraintStart_toStartOf="@+id/titulo_principal_login"
        app:layout_constraintTop_toTopOf="@+id/titulo_principal_login" />

    <EditText
        android:id="@+id/et_email_login"
        style="@style/EstiloCorBranca"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_secundario_login" />

    <EditText
        android:id="@+id/et_senha_login"
        style="@style/EstiloCorBranca"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_email_login"
        app:layout_constraintStart_toStartOf="@+id/et_email_login"
        app:layout_constraintTop_toBottomOf="@+id/et_email_login" />

    <Button
        android:id="@+id/bt_login_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/botao_redondo_gradiente_branco"
        android:src="?android:attr/selectableItemBackground"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/corRoxoClaro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/et_senha_login"
        app:layout_constraintStart_toStartOf="@+id/et_senha_login"
        app:layout_constraintTop_toBottomOf="@+id/et_senha_login" />

</androidx.constraintlayout.widget.ConstraintLayout>