<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout_cadastrar_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/et_nome_cadastrar_cliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/nome_cliente"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_area_cadastrar_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/cod_area"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/et_nome_cadastrar_cliente"
        app:layout_constraintTop_toBottomOf="@+id/et_nome_cadastrar_cliente" />

    <EditText
        android:id="@+id/et_telefone_cadastrar_cliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/cod_telefone"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/et_nome_cadastrar_cliente"
        app:layout_constraintStart_toEndOf="@+id/et_area_cadastrar_cliente"
        app:layout_constraintTop_toTopOf="@+id/et_area_cadastrar_cliente" />

    <Button
        android:id="@+id/bt_cadastrar_cadastrar_cliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/botao_redondo_gradiente_roxo"
        android:text="@string/cadastrar"
        android:textColor="@color/corBranca"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_telefone_cadastrar_cliente"
        app:layout_constraintStart_toStartOf="@+id/et_area_cadastrar_cliente"
        app:layout_constraintTop_toBottomOf="@+id/et_telefone_cadastrar_cliente" />

</androidx.constraintlayout.widget.ConstraintLayout>